EventEmmiterTest